# bigweaver-agent-canary-zeta-hydro-deps

./: .criterion.toml  .gitignore  ARCHITECTURE.md  BENCHMARKING.md  BENCHMARKING_BEST_PRACTICES.md  BENCHMARKING_GUIDE.md  BENCHMARKS.md  BENCHMARKS_COMPARISON.md  BENCHMARKS_GUIDE.md  BENCHMARKS_INFO.md  BENCHMARKS_MIGRATION.md  BENCHMARK_ARCHITECTURE.md  BENCHMARK_COMPARISON.md  BENCHMARK_DESCRIPTIONS.md  BENCHMARK_DETAILS.md  BENCHMARK_GUIDE.md  BENCHMARK_IMPLEMENTATIONS.md  BENCHMARK_MIGRATION.md  BENCHMARK_MIGRATION_SUMMARY.md  BENCHMARK_REMOVAL_COMPLETED.md  BENCHMARK_USAGE.md  BENCHMARK_VERIFICATION_REPORT.md  CHANGELOG.md  CHANGES.md  CHANGES.txt  CHANGES_README.md  CHANGES_SUMMARY.md  CHECKLIST.md  COMMIT_MESSAGE.txt  COMPARISON.md  COMPARISON_GUIDE.md  COMPATIBILITY.md  COMPLETION_CHECKLIST.md  COMPLETION_REPORT.md  COMPLETION_SUMMARY.md  COMPLETION_SUMMARY.txt  CONFIGURATION.md  CONFIGURATION_SUMMARY.md  CONTRIBUTING.md  CROSS_REPOSITORY_BENCHMARKING.md  (+107 more)
.cargo/: config.toml
.github/gh-pages/: .gitignore  index.md
.github/workflows/: bench.yml  benchmark.yml  benchmarks.yml  benchmarks.yml.example  ci.yml
benches/: .gitignore  BENCHMARKS.md  Cargo.toml  Cargo.toml.local  EXAMPLES.md  MIGRATION.md  QUICK_START.md  README.md  arithmetic.rs  arithmetic_comparison.rs  build.rs  fan_in.rs  fan_in_comparison.rs  fan_out.rs  fan_out_comparison.rs  fork_join.rs  fork_join_comparison.rs  identity.rs  identity_comparison.rs  join_comparison.rs  reachability.rs  reachability_comparison.rs  run_benchmarks.sh  setup.sh  words_alpha.txt
benches/benches/: .gitignore  arithmetic.rs  comparison.rs  dataflow_patterns.rs  differential_basic_ops.rs  differential_reachability.rs  fan_in.rs  fan_out.rs  fork_join.rs  futures.rs  identity.rs  join.rs  micro_ops.rs  reachability.rs  symmetric_hash_join.rs  timely_basic_ops.rs  timely_reachability.rs  upcase.rs  words_diamond.rs
benches/benches/common/: mod.rs
benches/differential/: Cargo.toml
benches/differential/benches/: arithmetic.rs  fan_in.rs  fan_out.rs  identity.rs  micro_ops.rs  reachability.rs
benches/differential_benchmarks/: Cargo.toml  README.md  arrange_bench.rs  iterate_bench.rs  reduce_bench.rs
benches/examples/: simple_benchmark.rs
benches/src/: lib.rs
benches/timely/: Cargo.toml
benches/timely/benches/: arithmetic.rs  fan_in.rs  fan_out.rs  identity.rs  micro_ops.rs  reachability.rs
benches/timely_benchmarks/: Cargo.toml  README.md  fanout_bench.rs  join_bench.rs  reachability_bench.rs
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: differential_dataflow_ops.rs  reachability.rs  timely_reachability.rs
comparison-tools/: Cargo.toml
comparison-tools/src/: analyze.rs  compare.rs
dfir_rs/: Cargo.toml
differential-benchmarks/: Cargo.toml  README.md
differential-benchmarks/benches/: arrange.rs  consolidate.rs  count.rs  distinct.rs  graph_computation.rs  group_reduce.rs  incremental_join.rs  join.rs
differential-benchmarks/src/: lib.rs
differential_dataflow_benchmarks/: Cargo.toml
differential_dataflow_benchmarks/benches/: differential_bench.rs
differential_dataflow_benchmarks/src/: lib.rs
docs/: BENCHMARKS_COMPARISON.md  BENCHMARK_COMPARISON.md  MIGRATION.md  QUICKSTART.md
examples/: compartmentalized_paxos.rs
external-benchmarks/: Cargo.toml  README.md
hydro_benches/: Cargo.toml  README.md  build.rs
hydro_benches/examples/: compartmentalized_paxos.rs  paxos.rs  two_pc.rs
hydro_benches/src/cluster/: mod.rs
hydro_benchmarks/: Cargo.toml  README.md  build.rs
hydro_benchmarks/examples/: paxos.rs  two_pc.rs
hydro_benchmarks/src/: lib.rs  paxos_bench.rs  two_pc_bench.rs
hydro_benchmarks/src/cluster/: mod.rs  paxos.rs  paxos_bench.rs  two_pc.rs  two_pc_bench.rs
hydro_benchmarks/src/paxos_bench/: mod.rs
hydro_benchmarks/src/two_pc_bench/: mod.rs
hydro_std/: README.md
hydro_test/: Cargo.toml  README.md
hydro_test/examples/: compartmentalized_paxos.rs  paxos.rs  two_pc.rs
hydro_test_benches/: Cargo.toml  README.md  lib.rs  paxos_bench.rs  two_pc_bench.rs
hydro_test_benches/examples/: compartmentalized_paxos.rs  paxos.rs  two_pc.rs
hydro_test_benches/src/: lib.rs
hydro_test_benchmarks/: Cargo.toml  README.md
hydro_test_benchmarks/src/: lib.rs
hydro_test_examples/: Cargo.toml  README.md  paxos.rs
hydro_test_examples/src/: lib.rs
scripts/: README.md  analyze_results.py  compare_benchmarks.sh  compare_performance.sh  compare_results.sh  compare_with_baseline.sh  compare_with_main.sh  run_benchmarks.sh  run_comparison_benchmarks.sh  setup.sh  track_performance.sh  verify_benchmarks.sh
src/: lib.rs
timely-benchmarks/: Cargo.toml  README.md
timely-benchmarks/benches/: arithmetic.rs  barrier.rs  barrier_sync.rs  data_parallel.rs  dataflow_construction.rs  exchange.rs  fan_in.rs  fan_out.rs  fork_join.rs  graph_reachability.rs  identity.rs  progress_tracking.rs  reachability.rs  unary_operators.rs
timely-benchmarks/src/: lib.rs
timely-differential-benches/: Cargo.toml  README.md
timely-differential-benches/benches/: .gitignore  arithmetic.rs  arithmetic_timely.rs  differential_count.rs  differential_distinct.rs  differential_join.rs  fan_in.rs  fan_in_timely.rs  fan_out.rs  fan_out_timely.rs  fork_join.rs  fork_join_timely.rs  identity.rs  identity_timely.rs  join.rs  join_timely.rs  reachability.rs  reachability_timely_differential.rs  upcase.rs  upcase_timely.rs  zip.rs
timely-differential-benchmarks/: BENCHMARK_COMPARISON.md  Cargo.toml  INDEX.md  MIGRATION.md  QUICKSTART.md  README.md  TESTING.md
timely-differential-benchmarks/benches/: arithmetic.rs  fan_in.rs  fan_out.rs  fork_join.rs  identity.rs  join.rs  reachability.rs  upcase.rs
timely-differential-benchmarks/src/: lib.rs
timely_benchmarks/: Cargo.toml
timely_benchmarks/benches/: timely_bench.rs
timely_benchmarks/src/: lib.rs
