[workspace]

members = [
    "benches",
]

resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/hydro-project/bigweaver-agent-canary-zeta-hydro-deps"

[workspace.lints.rust]
impl_trait_overcaptures = "warn"
missing_unsafe_on_extern = "deny"
unsafe_attr_outside_unsafe = "deny"

[workspace.lints.clippy]
redundant_closure_for_method_calls = "allow"
type_complexity = "allow"
