[workspace]
resolver = "2"
members = [
    "benches",
    "dfir_rs",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-zeta-hydro-deps"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
todo = "warn"
