[package]
name = "benches"
publish = false
version = "0.0.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }
differential-dataflow = { package = "differential-dataflow-master", version = "0.13.0-dev.1" }
rand = "0.8.0"
rand_distr = "0.4.3"
static_assertions = "1.0.0"
timely = { package = "timely-master", version = "0.13.0-dev.1" }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "reachability"
harness = false
