[package]
name = "hydro_benches"
version = "0.1.0"
edition = "2024"
publish = false

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "micro_ops"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[dependencies]
timely = "0.12"
differential-dataflow = "0.12"
criterion = "0.5"

[profile.release]
debug = true
