[package]
name = "hydro-deps-benchmarks"
publish = false
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }
differential-dataflow = { package = "differential-dataflow-master", version = "0.13.0-dev.1" }
timely = { package = "timely-master", version = "0.13.0-dev.1" }
lazy_static = "1.4"
rand = "0.8.0"
rand_distr = "0.4.3"

# Optional: Include dfir_rs from the main repository for comparative benchmarks
# To enable this, clone the main repository and uncomment the line below:
# dfir_rs = { path = "../../bigweaver-agent-canary-hydro-zeta/dfir_rs", features = [ "debugging" ], optional = true }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "upcase"
harness = false
