[package]
name = "comparison-tools"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "compare-benchmarks"
path = "src/compare.rs"

[[bin]]
name = "analyze-results"
path = "src/analyze.rs"
