[package]
name = "differential-benchmarks"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
timely = { workspace = true }
differential-dataflow = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "arrange"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "count"
harness = false

[[bench]]
name = "consolidate"
harness = false

[[bench]]
name = "distinct"
harness = false
