[package]
name = "differential-benchmarks"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
timely = { workspace = true }
differential-dataflow = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
abomonation = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "incremental_join"
harness = false

[[bench]]
name = "graph_computation"
harness = false

[[bench]]
name = "group_reduce"
harness = false

[[bench]]
name = "distinct"
harness = false
