[package]
name = "differential_dataflow_benchmarks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bench]]
name = "differential_bench"
harness = false

[dependencies]
timely.workspace = true
differential-dataflow.workspace = true

[dev-dependencies]
criterion = "0.5"
