[package]
name = "hydro_benches"
publish = false
version = "0.0.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

# Benchmarks for timely and differential-dataflow dependencies
# These were moved from bigweaver-agent-canary-hydro-zeta to keep that repository
# focused on core functionality without these heavy dependencies.

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }
# Note: dfir_rs and sinktools need to be referenced from the main repository
# When running benchmarks, you may need to clone bigweaver-agent-canary-hydro-zeta
# and adjust these paths or use git dependencies
dfir_rs = { git = "https://github.com/hydro-project/hydro", branch = "main", features = [ "debugging" ] }
differential-dataflow = { package = "differential-dataflow-master", version = "0.13.0-dev.1" }
futures = "0.3"
nameof = "1.0.0"
rand = "0.8.0"
rand_distr = "0.4.3"
seq-macro = "0.2.0"
sinktools = { git = "https://github.com/hydro-project/hydro", branch = "main" }
static_assertions = "1.0.0"
timely = { package = "timely-master", version = "0.13.0-dev.1" }
tokio = { version = "1.29.0", features = [ "rt-multi-thread" ] }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "upcase"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "micro_ops"
harness = false

[[bench]]
name = "symmetric_hash_join"
harness = false

[[bench]]
name = "words_diamond"
harness = false

[[bench]]
name = "futures"
harness = false