[package]
name = "hydro_benchmarks"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
# External dependencies for benchmarking
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = "1.29.0"
bytes = "1.1.0"
hdrhistogram = "7.5.0"

# These will need to reference the main hydro repository or be published crates
# For now, using path dependencies that point back to the source repo
# In production, these would be proper version dependencies
hydro_lang = { version = "^0.14.0" }
hydro_std = { version = "^0.14.0" }
stageleft = { workspace = true }

[build-dependencies]
stageleft_tool = { workspace = true }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2"
dfir_lang = { version = "^0.14.0" }
futures = "0.3.0"
hydro_deploy = { version = "^0.14.0" }
hydro_lang = { version = "^0.14.0", features = [
    "deploy",
    "sim",
    "viz",
] }
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }
tokio-test = "0.4.4"
dfir_rs = { version = "^0.14.0", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
