[package]
name = "hydro_benchmarks"
publish = false
version = "0.0.0"
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
hydro_lang = { git = "https://github.com/hydro-project/hydro.git" }
hydro_std = { git = "https://github.com/hydro-project/hydro.git" }
hydro_test = { git = "https://github.com/hydro-project/hydro.git" }
stageleft = "0.10.2"
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = "1.29.0"
bytes = "1.1.0"

[build-dependencies]
stageleft_tool = "0.10.2"
hydro_build_utils = { git = "https://github.com/hydro-project/hydro.git" }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2"
dfir_lang = { git = "https://github.com/hydro-project/hydro.git" }
futures = "0.3.0"
hydro_deploy = { git = "https://github.com/hydro-project/hydro.git" }
hydro_lang = { git = "https://github.com/hydro-project/hydro.git", features = [
    "deploy",
    "sim",
    "viz",
] }
hydro_build_utils = { git = "https://github.com/hydro-project/hydro.git" }
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }
tokio-test = "0.4.4"
dfir_rs = { git = "https://github.com/hydro-project/hydro.git", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
