[package]
name = "hydro_benchmarks"
publish = false
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[lints]
workspace = true

[dependencies]
hydro_lang = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.14.0" }
hydro_std = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.14.0" }
hydro_test = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.0.0" }
stageleft.workspace = true
serde = { version = "1.0.197", features = ["derive"] }

[build-dependencies]
stageleft_tool.workspace = true

[dev-dependencies]
dfir_lang = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.14.0" }
hydro_deploy = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.14.0" }
hydro_lang = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git", version = "^0.14.0", features = ["deploy", "sim", "viz"] }
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }

