[package]
name = "hydro_test_bench"
publish = false
version = "0.0.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
# Reference hydro packages from the main bigweaver-agent-canary-hydro-zeta repository
hydro_lang = { path = "../../bigweaver-agent-canary-hydro-zeta/hydro_lang", version = "^0.14.0" }
hydro_std = { path = "../../bigweaver-agent-canary-hydro-zeta/hydro_std", version = "^0.14.0" }
stageleft.workspace = true
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = "1.29.0"
bytes = "1.1.0"

[build-dependencies]
stageleft_tool.workspace = true
hydro_build_utils = { path = "../../bigweaver-agent-canary-hydro-zeta/hydro_build_utils", version = "0.0.1" }

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
ctor = "0.2"
dfir_lang = { path = "../../bigweaver-agent-canary-hydro-zeta/dfir_lang", version = "^0.14.0" }
futures = "0.3.0"
hydro_deploy = { path = "../../bigweaver-agent-canary-hydro-zeta/hydro_deploy/core", version = "^0.14.0" }
hydro_lang = { path = "../../bigweaver-agent-canary-hydro-zeta/hydro_lang", version = "^0.14.0", features = [
    "deploy",
    "sim",
    "viz",
] }
hydro_build_utils = { path = "../../bigweaver-agent-canary-hydro-zeta/hydro_build_utils", version = "0.0.1" }
regex = "1"
tokio = { version = "1.29.0", features = ["full"] }
tokio-test = "0.4.4"
dfir_rs = { path = "../../bigweaver-agent-canary-hydro-zeta/dfir_rs", version = "^0.14.0", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Enable examples
[[example]]
name = "paxos"
path = "examples/paxos.rs"

[[example]]
name = "compartmentalized_paxos"
path = "examples/compartmentalized_paxos.rs"

[[example]]
name = "two_pc"
path = "examples/two_pc.rs"
