[package]
name = "hydro_test_benches"
publish = false
version = "0.0.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

# These benchmarks depend on modules from the main hydro_test crate
# which tests the paxos and two-phase commit implementations.
# They are extracted here to avoid pulling in timely/differential dependencies
# into the main repository.

[dependencies]
hydro_lang = { git = "https://zeta.us-east-1.modeled-gateway.integrations.bigweaver.aws.dev/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git" }
hydro_std = { git = "https://zeta.us-east-1.modeled-gateway.integrations.bigweaver.aws.dev/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta.git" }

[build-dependencies]
# Note: These benchmarks depend on the main hydro repository's test infrastructure
# and should be run in coordination with that repository for performance comparisons
