[package]
name = "hydro_test_benchmarks"
publish = false
version = "0.0.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
# Reference the main hydro repository for core libraries
hydro_lang = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta" }
hydro_std = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta" }
stageleft.workspace = true
rand = "0.8.0"
serde = { version = "1.0.197", features = ["derive"] }
ctor = "0.2.9"
colored = "3.0.0"
palette = "0.7.6"
tokio = "1.29.0"
bytes = "1.1.0"

[build-dependencies]
stageleft_tool.workspace = true
hydro_build_utils = { git = "https://github.com/BigWeaverServiceCanaryZetaIad/bigweaver-agent-canary-hydro-zeta" }

[[example]]
name = "compartmentalized_paxos"
path = "examples/compartmentalized_paxos.rs"

[[example]]
name = "paxos"
path = "examples/paxos.rs"

[[example]]
name = "two_pc"
path = "examples/two_pc.rs"
