[package]
name = "hydro_test_examples"
publish = false
version = "0.0.0"
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
hydro_deploy = { workspace = true }
hydro_lang = { workspace = true }
hydro_test = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "paxos"
path = "paxos.rs"

[[example]]
name = "two_pc"
path = "two_pc.rs"

[[example]]
name = "compartmentalized_paxos"
path = "compartmentalized_paxos.rs"
