[package]
name = "timely-benchmarks"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
timely = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
abomonation = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "graph_reachability"
harness = false

[[bench]]
name = "data_parallel"
harness = false

[[bench]]
name = "barrier_sync"
harness = false

[[bench]]
name = "exchange"
harness = false
