[package]
name = "timely-benchmarks"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false

[dependencies]
timely = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "barrier"
harness = false

[[bench]]
name = "exchange"
harness = false

[[bench]]
name = "dataflow_construction"
harness = false

[[bench]]
name = "progress_tracking"
harness = false

[[bench]]
name = "unary_operators"
harness = false
