[package]
name = "timely-differential-benches"
publish = false
version = "0.0.0"
edition = "2024"
repository = "https://github.com/hydro-project/hydro"
license = "Apache-2.0"

# Benchmarks for pure Timely and Differential Dataflow implementations
# This package contains only timely/differential implementations without Hydro,
# enabling focused performance testing of these frameworks.

[dependencies]

[dev-dependencies]
criterion = { version = "0.5.0", features = [ "async_tokio", "html_reports" ] }
differential-dataflow = { package = "differential-dataflow-master", version = "0.13.0-dev.1" }
rand = "0.8.0"
rand_distr = "0.4.3"
seq-macro = "0.2.0"
static_assertions = "1.0.0"
timely = { package = "timely-master", version = "0.13.0-dev.1" }

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "upcase"
harness = false
