[package]
name = "timely-differential-benches"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

[features]
default = []
# Enable cross-repository comparisons with babyflow, hydroflow, and spinachflow
# To use: cargo bench --features cross-repo-compare
cross-repo-compare = ["babyflow", "hydroflow", "spinachflow"]

[dev-dependencies]
# Path dependencies for performance comparison with other dataflow implementations
# These are optional and only used when the 'cross-repo-compare' feature is enabled
# Requires the bigweaver-agent-canary-hydro-zeta repository to be cloned side-by-side
babyflow = { path = "../../bigweaver-agent-canary-hydro-zeta/babyflow", optional = true }
hydroflow = { path = "../../bigweaver-agent-canary-hydro-zeta/hydroflow", optional = true }
spinachflow = { path = "../../bigweaver-agent-canary-hydro-zeta/spinachflow", optional = true }

# Core benchmarking dependencies
criterion = { version = "0.3", features = ["async_tokio"] }
timely = "0.12"
differential-dataflow = "0.12"
lazy_static = "1.4.0"
rand = "0.8.4"
seq-macro = "0.2"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "fork_join"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "reachability"
harness = false

[[bench]]
name = "upcase"
harness = false

[[bench]]
name = "zip"
harness = false
