[package]
name = "differential-benchmarks"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[dependencies]
timely = { workspace = true }
differential-dataflow = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "fan_in"
harness = false

[[bench]]
name = "fan_out"
harness = false

[[bench]]
name = "identity"
harness = false

[[bench]]
name = "micro_ops"
harness = false

[[bench]]
name = "reachability"
harness = false
